@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.8 2004/11/10 10:29:56 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.9 2004/11/11 11:40:36 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -66,6 +66,9 @@ Version 4.44
     for the subprocesses that the daemon creates. Thus, it is useful for
     monitoring the behaviour of the daemon without creating as much output as
     full debugging.
+
+ 9. $host_address is now set to the target address during the checking of
+    ignore_target_hosts.
 
 
 
